[package]
name = "cdot"
version = "0.1.0"
edition = "2024"
authors = ["yutak <yutak03@gmail.com>"]
description = "A CLI tool for managing Redis/Valkey cache data"
license = "MIT"
repository = "https://github.com/yutak03/cache-data-operation"
keywords = ["redis", "valkey", "cache", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "cdot"
path = "src/main.rs"

[dependencies]
redis = "0.24"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[dev-dependencies]
mockall = "0.11"
redis-test = "0.1"
